drag n drop demo

--- a/css/main.scss
+++ b/css/main.scss
@@ -109,12 +109,12 @@ i.fa {
     }
 
     .article-title {
-        border-bottom: 1px solid mui-color('blue-grey','400');
+        //border-bottom: 1px solid mui-color('blue-grey','400');
         font-size: 45px;
         font-weight: bold;
         line-height: 50px;
         padding-bottom: 10px;
-        text-align: center;
+        //text-align: center;
 
         a {
             color: #111;
